Use a single searchcluster with both indexed and streaming docs.